<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.timelesssoftware.bakingapp.Ui.Fragment.RecipeSteps">

    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recipe_step_rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</FrameLayout>
