...
        app:layout_constraintRight_toRightOf="parent">


    </FrameLayout>

    <Button
        android:id="@+id/go_to_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
...
